Added Remove admin

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,5 @@
+<body class="body-main">
+<%= render '/layouts/navigation' %>
 About us
             <address>
             1050 Crater Lake Ave<br>
