Added about us page
About us added as dynamic from dashboard.
Currently uses a txt file to store about us description.

--- a/app/views/home/_edit_about_us_content.html.erb
+++ b/app/views/home/_edit_about_us_content.html.erb
@@ -1,1 +1,11 @@
 Edit About Us
+
+<%= form_tag :save_about_us do %>
+	<div class="form-group">
+		<%= text_area_tag(:desc, @about_us, rows: 10, class: "form-control") %>
+		</div>
+
+	<div class="form-group">
+		<%= submit_tag %>
+	</div>
+<% end %>
