--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,8 +1,14 @@
 <body class="body-main">
 <%= render '/layouts/navigation' %>
 About us
-            <address>
-            1050 Crater Lake Ave<br>
-            Medford, Oregon<br>
-            (541)622-8119
-            </address>
+<div>
+    <address>
+    1050 Crater Lake Ave<br>
+    Medford, Oregon<br>
+    (541)622-8119
+    </address>
+</div>
+
+<div class="text-center">
+	<%= @about_us %>
+</div>
