--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -19,5 +19,5 @@
         </ul>
 </li>
 <li class="navbar-center-item"><%= link_to "About Us", about_path, class: 'navbar-text-color' %></li>        
-<li class="navbar-center-item"><%= link_to "Facebook", "http://www.facebook.com/roguetattoos", class: 'navbar-text-color' %></li>
-<li class='navbar-center-item'><%= link_to "Instagram", "http://www.instagram.com/ludlowtattoo", class: 'navbar-text-color' %></li>
+<li class="navbar-center-item"><%= link_to image_tag('facebook.jpg', class: 'menu-icon'), "http://www.facebook.com/roguetattoos", class: 'navbar-text-color' %></li>
+<li class='navbar-center-item'><%= link_to image_tag('instagram.jpg', class: 'menu-icon'), "http://www.instagram.com/ludlowtattoo", class: 'navbar-text-color' %></li>
