Update to Artist & Makeup Artist
Added db entry for facebook & instagram.
Modified show pages to list facebook & instagram.
Change Permanent Makeup => Cosmetic Tattoos

--- a/app/views/artist/show.html.erb
+++ b/app/views/artist/show.html.erb
@@ -13,6 +13,18 @@
         <div>
             <%= @artist.bio %>
         </div>
+
+        <% if @artist.facebook %>
+        <div>
+        	<%= link_to "See me on Facebook", @artist.facebook %>
+        </div>
+        <% end %>
+
+        <% if @artist.instagram %>
+        <div>
+        	<%= link_to "Instagram", @artist.instagram %>
+        </div>
+        <% end %>
     </div>
 </div>
 
