--- a/app/views/artist/_new_content.html.erb
+++ b/app/views/artist/_new_content.html.erb
@@ -14,6 +14,16 @@ Add new artist
         </div>
         
         <div class='form-group'>
+            <label>Facebook</label>
+            <%= a.text_field :facebook, class: 'form-control' %>
+        </div>
+
+        <div class='form-group'>
+            <label>Instagram</label>
+            <%= a.text_field :instagram, class: 'form-control' %>
+        </div>
+
+        <div class='form-group'>
             <label>Choose Image</label>
             <%= a.file_field :avatar %>
         </div>
