--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -10,7 +10,7 @@
         </ul>
 </li>
 <li class="dropdown navbar-center-item">
-        <a href="#" class="dropdown-toggle navbar-text-color" data-toggle="dropdown">Permanent Makeup<b class="caret"></b></a>
+        <a href="#" class="dropdown-toggle navbar-text-color" data-toggle="dropdown">Cosmetic Tattoos<b class="caret"></b></a>
         <ul class="dropdown-menu drop-menu-item navbar-color">
         	<% @makeupart = Makeupartist.all %>
         	<% @makeupart.each do |m_artist| %>
