--- a/app/views/makeupartist/_edit_content.html.erb
+++ b/app/views/makeupartist/_edit_content.html.erb
@@ -16,6 +16,16 @@
         </div>
         
         <div class='form-group'>
+            <label>Facebook</label>
+            <%= a.text_field :facebook, class: 'form-control' %>
+        </div>
+
+        <div class='form-group'>
+            <label>Instagram</label>
+            <%= a.text_field :instagram, class: 'form-control' %>
+        </div>
+
+        <div class='form-group'>
             <label>Choose file to change profile picture</label>
             <%= a.file_field :avatar %>
         </div>
