--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,16 +23,9 @@
         <div id="carousel" class="carousel slide carousel-size" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel" data-slide-to="1"></li>
-                <li data-target="#carousel" data-slide-to="2"></li>
-                <li data-target="#carousel" data-slide-to="3"></li>
-                <li data-target="#carousel" data-slide-to="4"></li>
-                <li data-target="#carousel" data-slide-to="5"></li>
-                <li data-target="#carousel" data-slide-to="6"></li>
-                <li data-target="#carousel" data-slide-to="7"></li>
-                <li data-target="#carousel" data-slide-to="8"></li>
-                <li data-target="#carousel" data-slide-to="9"></li>
-                <li data-target="#carousel" data-slide-to="10"></li>
+                <% (1..@images.count).each do |i| %>
+                    <li data-target="#carousel" data-slide-to=<%= i %>></li>
+                <% end %>
             </ol>
 
             <div class="carousel-inner">
