--- a/app/views/home/_admin_edit_image_content.html.erb
+++ b/app/views/home/_admin_edit_image_content.html.erb
@@ -1,3 +1,3 @@
 <% @images.each do |image| %>
-	<%= image_tag(image.img.url(:thumb)) %>
+	<%= image_tag(image.img.url(:thumb), :class => "image-overview") %>
 <% end %>
