--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,72 +1,5 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-.body-main
+body *
 {
-    background-color: #000000;
-    background-image: url(asset_path("bg.jpg"));
-    background-size: 100% 100%;
-    background-repeat:no-repeat;
-    background-position: center center;
-    background-attachment:fixed;
-    color: white;
-}
-
-.homeimage
-{
-    width: auto;
-    height: auto;
-    margin-left:auto;
-    margin-right:auto;
-}
-
-.homeimageloc
-{
-    position:fixed;
-    bottom:50px;
-    left:0px;
-    right:auto;
-    
-}
-.home-logo-panel
-{
-    //background-color:rgba(0,0,0,1);
-    height: auto;
-    //max-height:75%;
-    //width: 350px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.nav-image
-{
-    height: auto;
-    width: 100px;
-}
-
-.table-home
-{
-  margin-left:auto;
-  margin-right:auto;
-}
-
-.carousel-size
-{
-    width: 500px;
-    height: 500px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.news
-{
-    width: 75%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.menu-icon
-{
-    width: 32px;
-    height: 32px;
+	margin: 0px;
+	padding: 0px;
 }
