--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,4 +2,95 @@ body *
 {
 	margin: 0px;
 	padding: 0px;
+	color: white;
+	position: relative;
+	//display: block;
+}
+
+body
+{
+	background-color: black;
+}
+
+header
+{
+	margin-bottom: 10px;
+}
+
+header nav
+{
+	height: 30px;
+	background-color: rgb(40,40,40);
+	width:80%;
+	margin-left:10%;
+	margin-right:10%;
+}
+
+header nav ul
+{
+	width: 100%;
+	height: 100%;
+	list-style: none;
+}
+
+header nav ul li
+{
+	width: 15%;
+	height: 100%;
+	margin-left: 5%;
+	margin-right: 5%;
+	float: left;
+	display: block;
+	text-align: center;
+}
+
+header nav ul li:hover
+{
+	background-color: rgb(30,30,30);
+}
+
+section#main
+{
+	background-color: rgb(40,40,40);
+	width: 80%;
+	height: 500px;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+div#slide-show
+{
+	float: left;
+	width: 50%;
+	max-height: 500px;
+	height: 500px;
+	background-color: black;
+}
+
+div#slide-show img
+{
+	width: 100%;
+}
+
+article#featured-artist
+{
+	float: left;
+	width: 50%;
+	height: 500px;
+	background-color: black;
+}
+
+article#featured-artist h1
+{
+	text-align: center;
+}
+
+article#featured-artist img
+{
+	max-width: 25%;
+	max-height: 25%;
+	float: left;
+	margin-top: 50%;
+	position: relative;
+	bottom: 25px;
 }
