--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text.css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Southern Oregon's premiere tattoo shop serving Ashland, Medford, Grants Pass, and everywhere in between">
     <title><%= content_for?(:title) ? yield(:title) : "Rogue Tattoo" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Rogue Tattoo" %>">
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
