--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -19,7 +19,7 @@ body
   max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
-  background-image: url(images/bg.jpg);
+  background-image: image_url("bg.jpg"); //url(images/bg.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
