--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -9,7 +9,7 @@ body *
 
 
   //display: block;
-  text-align: left;
+  //text-align: left;
 }
 
 body
@@ -17,12 +17,46 @@ body
   background-color: black;
   position: relative;
   max-width: 1400px;
+  min-width: 400px;
   margin-left: auto;
   margin-right: auto;
   background-image: image_url("bg.jpg"); //url(images/bg.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+}
+
+section#main ul
+{
+  list-style: none;
+}
+
+.list-display
+{
+  width: 20%;
+  margin: 2.5%;
+
+  //padding-bottom: 20%;
+  //height: 0px;
+  //width: 175px;
+  //height: 175px;
+  float: left;
+}
+
+.display
+{
+  width: 100%;
+  //height: 100%;
+  padding-bottom: 100%;
+  background-size: cover;
+  border: solid 2px silver;
+  border-radius: 10px;
+}
+
+.display-img
+{
+  width: 100%;
+  height: 100%;
 }
 
 header
@@ -33,24 +67,29 @@ header
 
 header img
 {
-  width: 100%;
-
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 header nav
 {
-  height: 30px;
+  height: 20px;
   background-color: rgb(40,40,40);
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
+  border-top: solid 2px silver;
+  border-bottom: solid 2px silver;
 }
 
 header nav ul
 {
   width: 100%;
   height: 100%;
-  list-style: none;
+
+  position: relative;
+  display: block;
 }
 
 header nav ul li
@@ -60,8 +99,9 @@ header nav ul li
   margin-left: 0%;
   margin-right: 0%;
   float: left;
-  display: block;
+  display: list-item;
   text-align: center;
+  list-style: none;
 }
 
 header nav ul li:hover
@@ -78,10 +118,11 @@ section#main
   margin-right: 10%;
 }
 
-div#slide-show
+div#displays
 {
   float: left;
-  width: 50%;
+  clear: left;
+  width: 70%;
   max-height: 500px;
 
   //height: 500px;
@@ -96,7 +137,7 @@ div#slide-show img
 article#featured-artist
 {
   float: left;
-  width: 50%;
+  width: 30%;
   max-height: 500px;
   background-color: rgba(0,0,0,0.75);
 }
@@ -195,4 +236,68 @@ li#phone
 li#hours
 {
   width: 35%;
+}
+
+/* Artist Page */
+section#artists
+{
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  background-color: rgba(0,0,0,0.5);
+}
+
+li.display-artist
+{
+  list-style: none;
+}
+
+div.display-area
+{
+  width: 100%;
+  background-color: black;
+  float: left;
+}
+
+.display-thumb
+{
+  
+  width: 8%;
+  padding-bottom: 8%;
+  float: left;
+  background-size: cover;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 3px;
+  list-style: none;
+  
+}
+
+.display-artist
+{
+  width: 100%;
+  height: 100%;
+}
+
+.td-preview
+{
+  width: 10%;
+}
+.avatar
+{
+  float: left;
+  width: 20%;
+  margin: 10px;
+}
+
+.display-samples
+{
+  width: 100%;
+  clear: both;
+}
+
+.display-artist p.more
+{
+  clear: left;
+  padding-left: 10px;
 }
