--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -123,7 +123,7 @@ div#displays
   float: left;
   clear: left;
   width: 70%;
-  max-height: 500px;
+  max-height: 1000px;
 
   //height: 500px;
   margin-bottom: 10px;
@@ -134,11 +134,11 @@ div#slide-show img
   width: 100%;
 }
 
-article#featured-artist
+article#greetings
 {
   float: left;
   width: 30%;
-  max-height: 500px;
+  max-height: 1000px;
   background-color: rgba(0,0,0,0.75);
 }
 
@@ -159,6 +159,7 @@ section#about
 
 section#news
 {
+  display: none;
   clear: left;
   width: 80%;
   margin-top: 20px;
@@ -250,6 +251,7 @@ section#artists
 li.display-artist
 {
   list-style: none;
+  margin-bottom: 10px;
 }
 
 div.display-area
@@ -349,6 +351,20 @@ div#full-image
 {
   float: right;
   width: 64%;
-  outline: solid 1px silver;
-  height: 500px;
+}
+
+div#full-image img
+{
+  width: 100%;
+}
+
+.thumb-list
+{
+  float: left;
+  list-style: none;
+}
+
+.text-center
+{
+  text-align: center;
 }
