--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html ng-app="roguetattoo">
+<html ng-app="roguetattoo" ng-controller="homeController as homeCtlr">
 <head>
   <base href="/">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Rubywebs.net">
+  <meta name="description" content={{metadescription}}>
+  <title>{{display_title}}</title>
 </head>
+
 <body>
-
-<%= yield %>
-
-</body>
+	<%= yield %>
+<body>
 </html>
