--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Rubywebs.net">
   <meta name="description" content={{metadescription}}>
+  <meta name="fragment" content="!">
   <title>{{display_title}}</title>
 </head>
 
