--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,3 +1,4 @@
+<div id="dashboard">
 <div class="row">
     <h1 class="text-center">Rogue Tattoo Dashboard</h1>
     <hr>
@@ -42,4 +43,5 @@
  		<div class="col-md-8">
  			<div id="content">
  		</div>
+</div>
 </div>
