--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -229,9 +229,9 @@ footer
   margin-left: 10%;
   margin-right: 10%;
   color: red;
-  background-color: rgb(40,40,40);
-  border-top: solid 2px silver;
-  border-bottom: solid 2px silver;
+  //background-color: rgb(40,40,40);
+  //border-top: solid 2px silver;
+  //border-bottom: solid 2px silver;
 }
 
 footer ul
