--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -241,23 +241,23 @@ footer ul
 
 footer ul li
 {
-  float: left;
-  display: block;
+  //float: left;
+  //display: block;
 }
 
 li#address
 {
-  width: 40%;
+  //width: 40%;
 }
 
 li#phone
 {
-  width: 25%;
+  //width: 25%;
 }
 
 li#hours
 {
-  width: 35%;
+  //width: 35%;
 }
 
 /* Artist Page */
