Fixed float for footer

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -229,6 +229,8 @@ footer
   margin-left: 10%;
   margin-right: 10%;
   color: red;
+  float: left;
+  clear: left;
   //background-color: rgb(40,40,40);
   //border-top: solid 2px silver;
   //border-bottom: solid 2px silver;
