--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -9,7 +9,7 @@ body
 {
   background-color: black;
   position: relative;
-  max-width: 1400px;
+  //max-width: 1400px;
   min-width: 600px;
   margin-left: auto;
   margin-right: auto;
@@ -26,8 +26,8 @@ section#main ul
 
 .list-display
 {
-  width: 20%;
-  margin: 2.5%;
+  width: 31.3%;
+  margin: 1%;
 
   //padding-bottom: 20%;
   //height: 0px;
@@ -39,11 +39,8 @@ section#main ul
 .display
 {
   width: 100%;
-  //height: 100%;
-  padding-bottom: 100%;
-  background-size: cover;
-  border: solid 2px silver;
-  border-radius: 10px;
+  height: 100%;
+  padding: 1%;
 }
 
 .display-img
@@ -67,13 +64,16 @@ header img
 
 header nav
 {
-  height: 20px;
-  background-color: rgb(40,40,40);
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
-  border-top: solid 2px silver;
-  border-bottom: solid 2px silver;
+  height: 55px;
+  line-height: 30px;
+  padding: 12.5px 0px;
+  //background-color: rgb(40,40,40);
+  background-color: #2F2F2F;
+  width: 100%;
+  //margin-left: 10%;
+  //margin-right: 10%;
+  //border-top: solid 2px silver;
+  //border-bottom: solid 2px silver;
 }
 
 header nav ul
@@ -87,10 +87,10 @@ header nav ul
 
 header nav ul li
 {
-  width: 25%;
+  //width: 25%;
   height: 100%;
-  margin-left: 0%;
-  margin-right: 0%;
+  margin-left: 30px;
+  margin-right: 10px;
   float: left;
   display: list-item;
   text-align: center;
@@ -100,19 +100,28 @@ header nav ul li
 header nav ul li a
 {
   text-decoration: none;
-  color: red;
+  //color: #999999;
+  font-size: 15px;
+  color: #D0D0D0;
 }
-header nav ul li:hover
+header nav ul li a:hover
 {
-  background-color: rgb(30,30,30);
+  //background-color: rgb(30,30,30);
+  color: red;
+  text-decoration: none;
+}
+
+.logo
+{
+  width: 100%;
 }
 
 section#main
 {
-  width: 80%;
-  height: 500px;
-  margin-left: 10%;
-  margin-right: 10%;
+  //width: 80%;
+  //height: 500px;
+  //margin-left: 10%;
+  //margin-right: 10%;
 }
 
 div#displays
@@ -133,18 +142,21 @@ div#slide-show img
 
 article#greetings
 {
-  float: left;
-  width: 30%;
-  height: 500px;
-  overflow-y: auto;
-  background-color: rgba(0,0,0,0.75);
+  //float: left;
+  //width: 30%;
+  //height: 500px;
+  //overflow-y: auto;
+
 
 }
 
 article#greetings p
 {
   text-align: justify;
-  color: white;
+  color: #999999;
+  font-family: 'Dekko', cursive;
+  font-size: 18px;
+  background-color: rgba(0,0,0,0.75);
 }
 
 section#rogue-info
