Home page layout

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -140,6 +140,11 @@ div#slide-show img
   width: 100%;
 }
 
+#displays li
+{
+  list-style: none;
+}
+
 article#greetings
 {
   //float: left;
@@ -154,6 +159,15 @@ article#greetings p
 {
   text-align: justify;
   color: #999999;
+  font-family: 'Dekko', cursive;
+  font-size: 18px;
+  background-color: rgba(0,0,0,0.75);
+}
+
+article#greetings ul li
+{
+  text-align: center;
+  color: #FB4141;
   font-family: 'Dekko', cursive;
   font-size: 18px;
   background-color: rgba(0,0,0,0.75);
@@ -236,12 +250,14 @@ div.news-content
 
 footer
 {
-  width: 80%;
-  height: 20px;
-  margin-left: 10%;
-  margin-right: 10%;
+  width: 100%;
+  margin: 0px;
+  //height: 20px;
+  //margin-left: 10%;
+  //margin-right: 10%;
+  background-color: #2F2F2F;
   color: red;
-  float: left;
+  //float: left;
   clear: left;
   //background-color: rgb(40,40,40);
   //border-top: solid 2px silver;
@@ -257,6 +273,11 @@ footer ul li
 {
   //float: left;
   //display: block;
+}
+
+.black-background
+{
+  background-color: black;
 }
 
 li#address
@@ -439,4 +460,20 @@ div#dashboard
 h1.show-artist
 {
   color: red;
+}
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
+    transition: all linear .75s;
+    display: block !important;
+    left: 0;
+}
+
+.animate-show.ng-hide-add.ng-hide-add-active, .animate-show.ng-hide-remove {
+    opacity: 0;
+    left: -100%;
+}
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove.ng-hide-remove-active {
+    opacity: 1;
+    left: 0;
 }
